# AlphaConsole

./: .gitignore  README.md  alpha_console.toml  design.md  prd.md  pyproject.toml  technical.md
.github/workflows/: pytest.yml
docs/: README.md  calibration.md  coding-plan.md  configuration.md  contracts.md  core-flows.md  delivery-diagnostics.md  hardware-delivery.md  manual-runtime.md  object-model.md  prd-v0.2.md  print-pipeline.md  printer-profiles.md  printer-targets.md  publication-runtime.md  raster-printing.md  runtime-state.md  scheduler-runtime.md  template-spec.md
examples/: basic.toml  escpos_tcp.toml  printer-bytes-debug.toml  printer-network.toml
tests/: test_bytes_file_adapter.py  test_calibration_page.py  test_cli.py  test_cli_hardware_printing.py  test_cli_printer_ops.py  test_cli_runtime.py  test_config_loader.py  test_delivery_diagnostics.py  test_end_to_end_automated_runtime.py  test_end_to_end_calibrated_hardware_runtime.py  test_end_to_end_hardware_runtime.py  test_end_to_end_manual_runtime.py  test_end_to_end_publication_runtime.py  test_escpos_encoding.py  test_escpos_tcp_adapter.py  test_file_adapter.py  test_issue_assembler.py  test_issue_text_renderer.py  test_memory_adapter.py  test_print_service.py  test_printer_profiles.py  test_printer_target_config.py  test_publication_service.py  test_raster_rendering.py  test_runtime_builder.py  test_runtime_service.py  test_scene_block.py  test_scene_block_renderer.py  test_scheduler_policy.py  test_socket_adapter.py  test_sqlite_store.py  test_width.py
var/: alpha_console.db
(+64 files in other folders)
