[project]
name = "alpha-console"
version = "0.2.0"
description = "Minimal domain skeleton for a personal paper publishing system"
readme = "README.md"
authors = [
    { name = "LiTang", email = "litang0617@outlook.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "alphaconsole"
